// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EntryTypeIcon should return the correct icon if input is EntryType 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--reviewed"
    title="This marks a reviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;

exports[`EntryTypeIcon should return the correct icon if input is a string 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;
